[package]
name = "frame-translation-generator"
description = "CLI to generate MoreMcmeta animations by translating a texture."
authors = ["soir20"]
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.19", features = ["derive"] }
image = "0.24.6"

[build-dependencies]
static_vcruntime = "2.0.0"